# microservices

./: .entrypoint.rmq.sh  .gitignore  .idea.drawio  Makefile  README.md  entrypoint.rmq.sh  entrypoint.sh  pyproject.toml
auth_service/: .env.example  docker-compose.yaml  entrypoint.sh  pyproject.toml
auth_service/grpc_/: unary_auth.proto
auth_service/src/: commands.py  config.py  db.py  dto.py  exceptions.py  handlers.py  repository.py  services.py
auth_service/src/common/: config.py  di.py  dto.py  exceptions.py  utils.py
auth_service/src/common/db/sqlalchemy/: config.py  models.py
auth_service/src/dto/: domain.py  schemas.py
auth_service/src/entry_points/: rmq.py
auth_service/src/entry_points/fastapi/: exceptions.py  handlers.py  main.py
auth_service/src/entrypoints/: fastapi_app.py  grpc_server.py  rabbitmq_consumer.py
auth_service/src/services/: auth.py  exceptions.py
auth_service/src/storages/: db.py
auth_service/src/storages/repositories/: base.py  impl.py
auth_service/src/web/: handlers.py  schemas.py
message_broker/: docker-compose.yaml
product_service/: .dockerignore  .env.example  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
product_service/grpc_/: unary_auth_pb2.py  unary_auth_pb2.pyi  unary_auth_pb2_grpc.py
product_service/src/: config.py  container.py  dto.py  handlers.py  models.py  repository.py  schemas.py  service.py
product_service/src/common/: config.py  container.py
product_service/src/repositories/: base.py  mongo.py
product_service/src/services/: base.py  exceptions.py  impl.py
product_service/src/web/: handlers.py  middlewares.py  schemas.py  utils.py
product_service/tests/: test_rmq_client.py
product_service/tests/e2e/: conftest.py  test_gw_communication.py
