[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = ""
authors = ["artorias <kerelkobarabash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
pika = "^1.3.2"
asyncpg = "^0.29.0"
bcrypt = "^4.1.3"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
