[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = ""
authors = ["artorias <kerelkobarabash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
bcrypt = "^4.1.3"
fastapi = "^0.111.0"
pyjwt = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
punq = "^0.7.0"
aio-pika = "^9.4.2"
orjson = "^3.10.6"
grpcio = "^1.64.1"
grpcio-tools = "^1.64.1"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
